docs: update MIGRATION_GUIDE for 2.0.4 and testcontainers
- Bump the karate-junit6 dep example from 2.0.2 -> 2.0.4
- Add a new "CI/CD with Testcontainers" section pointing at karate-todo
  with the host-port exposure pattern inlined
- Expand the karate-todo appendix with a direct link to the bulk
  migration diff (d901b3e) and a pointer to the upcoming CI/CD commits

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>